# auth

./: CMakeLists.txt  README.md  vix.json
.github/workflows/: ci.yml
cmake/: RixAuthConfig.cmake.in
examples/: CMakeLists.txt  basic.cpp
include/rix/auth/: Auth.hpp  AuthConfig.hpp  AuthError.hpp  AuthModule.hpp  AuthResult.hpp  ManagedAuth.hpp  PasswordHasher.hpp  Session.hpp  SessionStore.hpp  Token.hpp  User.hpp  UserStore.hpp  Version.hpp
include/rix/auth/stores/: DbSessionStore.hpp  DbUserStore.hpp  MemorySessionStore.hpp  MemoryUserStore.hpp
src/: Auth.cpp  AuthConfig.cpp  AuthError.cpp  AuthModule.cpp  ManagedAuth.cpp  PasswordHasher.cpp  Session.cpp  SessionStore.cpp  Token.cpp  User.cpp  UserStore.cpp  Version.cpp
src/stores/: DbSessionStore.cpp  DbUserStore.cpp  MemorySessionStore.cpp  MemoryUserStore.cpp
tests/: AuthTests.cpp  CMakeLists.txt  MemorySessionStoreTests.cpp  MemoryUserStoreTests.cpp  PasswordHasherTests.cpp  SessionTests.cpp  TokenTests.cpp  UserTests.cpp
